<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/condicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nuevo"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_marginTop="112dp"
                android:src="@drawable/product_model"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/imagen_del_producto" />

            <androidx.appcompat.widget.AppCompatRatingBar

                android:id="@+id/productRate"
                style="@android:style/Widget.Material.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_marginTop="80dp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:maxLines="1"
                android:text="@string/producto"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="456dp"
                android:text="@string/_1_000"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cuotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="484dp"
                android:text="@string/cantidadDeCuotasSinIntereses"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/disponibilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="516dp"
                android:text="@string/Disponible_en_tu_domiclio"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fechaDeEntrega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="552dp"
                android:text="@string/Entrega_mañana"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAgregarAlCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="516dp"
                android:backgroundTint="@color/titleColour"
                android:text="@string/Agregar_al_carrito"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/productName" />

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="652dp"
                android:text="@string/Descripcion"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="692dp"
                android:text="@string/Descripcion"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
