<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginFragment"
    android:background="@color/background"
    >

    <ImageView
        android:src="@drawable/ic_shopping_bag"
        android:layout_height="65dp"
        android:layout_width="120dp"
        android:contentDescription="@string/logo_de_bedu"
        android:scaleType="centerInside"
        android:layout_marginTop="60dp"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/titleColour"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLogin"
        style="@style/Bedu.TextInputLayout"
        android:layout_marginTop="60dp"
        android:hint="@string/add_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <!--EDIT TEXT REEMPLAZADO POR MATERIAL DESIGN
    <EditText
        android:id="@+id/emailInputLogin"
        android:hint="@string/add_email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="60dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        />

    <EditText
        android:id="@+id/passwordInputLogin"
        android:hint="@string/add_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="60dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:layout_marginBottom="25dp"

        />
        -->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Bedu.TextInputLayout"
        android:id="@+id/passwordInputLogin"
        android:layout_marginTop="15dp"
        android:hint="@string/add_password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:backgroundTint="@color/titleColour"
        android:text="@string/iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:layout_marginTop="15dp"
        android:focusable="true" />
</LinearLayout>