<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Regístrate"
        android:textColor="@color/colorSecondary"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:colorScheme="dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

  <!--Old Edit Text, Replaced by Material Design
    <EditText
        android:id="@+id/fullName"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        android:hint="Nombre completo"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName"
        style="@style/Bedu.RegisterTextInputLayout"
        android:layout_marginTop="40dp"
        android:hint="@string/nombre_completo"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
<!-- Old Edit Text, Replaced by Material Design
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"
        android:hint="Correo electrónico"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        />
-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        style="@style/Bedu.RegisterTextInputLayout"
        android:layout_marginTop="20dp"
        android:hint="@string/add_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

  <!--  <EditText Old Edit Text, Replaced by Material Design
        android:id="@+id/phoneInput"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="12dp"
        android:hint="Teléfono"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInput"
        style="@style/Bedu.RegisterTextInputLayout"
        android:layout_marginTop="20dp"
        android:hint="@string/telefono"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
  <!--  <EditText Old Edit Text, Replaced by Material Design
        android:id="@+id/passwordInput"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        style="@style/Bedu.RegisterTextInputLayout"
        android:layout_marginTop="20dp"
        android:hint="@string/contraseña"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>